--- a/try_230724/Views/Home/Index.cshtml
+++ b/try_230724/Views/Home/Index.cshtml
@@ -6,3 +6,8 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<h2>
+test222
+</h2>
+<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Link">LINK_LINK</a>
