--- a/try_230724/Views/Home/Index.cshtml
+++ b/try_230724/Views/Home/Index.cshtml
@@ -11,3 +11,15 @@
 test222
 </h2>
 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Link">LINK_LINK</a>
+
+@model YourViewModel
+
+<form method="post" action="@Url.Action("ShowData", "Home")">
+    <label for="name">姓名：</label>
+    <input type="text" name="name" id="name" required>
+    <br>
+    <label for="age">年齡：</label>
+    <input type="number" name="age" id="age" required>
+    <br>
+    <input type="submit" value="提交">
+</form>
